# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/stage1_target.py:
  Removing cleaning of python encodings for bug #64890.

  11 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Add an extra warning into the generated make.conf about changing the CHOST

  01 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/livecdfs-update.sh:
  We don't need to copy files from /usr/lib/hotplug/firmware anymore.

  29 Oct 2007; Andrew Gaffney <agaffney@gentoo.org>
  targets/embedded/embedded-preclean-chroot.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh:
  Check to see if distcc is enabled before calling cleanup_distcc().

  17 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> arch/ppc.py,
  arch/sparc.py, arch/x86.py:
  Look for linux32 in /bin and /usr/bin.

  12 Oct 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Make error message more specific when removing immutable flag.

  11 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/livecd-stage2_template.spec, modules/generic_stage_target.py:
  Added Andrew Gaffney to maintainer list, fixed a typo, updated copyright
  information, and added a small fix for FreeBSD for bug #169041. This is
  catalyst 2.0.5_pre4 for testing.

  11 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Adding a slightly modified version of Andrew Gaffney's <agaffney@gentoo.org>
  patch from bug #120076 to add cross-compiling support to our distcc
  configuration.

  11 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added a version of get_libdir from multilib.eclass so we can determine where