@@ -1,6 +1,13 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/livecdfs-update.sh, targets/support/unmerge.sh:
+  Removing old mkvardb code which is no longer used, commenting out setting of
+  Gnome theme for testing now that Clearlooks has been default for some time,
+  and changing vdb move from a case statement to a simple if statement. This
+  is 2.0.5_pre5 for testing.
+
   13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/stage1_target.py:
   Removing cleaning of python encodings for bug #64890.
